# ChangeLog for www-misc/xxv
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-misc/xxv/ChangeLog,v 1.16 2011/01/13 17:57:12 idl0r Exp $

  13 Jan 2011; Christian Ruppert <idl0r@gentoo.org> xxv-1.6.1.ebuild:
  Rephrase some sentences. HOMEPAGE fixed.

  27 Dec 2010; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.6.ebuild,
  xxv-1.6.1.ebuild:
  added missing depend dev-perl/Template-GD; thx to negril @ irc gentoo-vdr

  01 Dec 2010; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.6.1.ebuild:
  fixed versions depend to xxv-skins; thx to negril@irc#gentoo-vdr

*xxv-1.6.1 (27 Nov 2010)

  27 Nov 2010; Joerg Bornkessel <hd_brummy@gentoo.org> +xxv-1.6.1.ebuild:
  version bump

  09 May 2010; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.6.ebuild:
  added missing depend dev-perl/JSON; fixed permisssion for xxv.cfg

*xxv-1.6 (09 May 2010)

  09 May 2010; Joerg Bornkessel <hd_brummy@gentoo.org> -xxv-1.3.1.ebuild,
  +xxv-1.6.ebuild:
  version bump; cleanup

  03 Jan 2010; Joerg Bornkessel <hd_brummy@gentoo.org> -xxv-1.0.1-r1.ebuild,
  -xxv-1.2-r1.ebuild, -xxv-1.2.1402.ebuild, -xxv-1.3.ebuild, xxv-1.4.ebuild,
  +xxv-1.5.ebuild, -files/xxv, -files/xxv.utf8-v2, -files/xxv.utf8-v3:
  clean up

*xxv-1.5 (03 Jan 2010)

  03 Jan 2010; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.4.ebuild,
  +xxv-1.5.ebuild, -files/xxv, -files/xxv.utf8-v2, -files/xxv.utf8-v3:
  version bump; xxv-1.5 testing version; clean up

*xxv-1.4 (16 Aug 2009)

  16 Aug 2009; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.2.1402.ebuild,
  xxv-1.3.ebuild, +xxv-1.4.ebuild, +files/xxv.utf8-v5:
  version bump; some eapi=2 fixes in older ebuilds

  19 Jul 2009; Torsten Veller <tove@gentoo.org> xxv-1.0.1-r1.ebuild,
  xxv-1.2-r1.ebuild, xxv-1.2.1402.ebuild, xxv-1.3.ebuild, xxv-1.3.1.ebuild:
  IO-Compress replaces Compress-Zlib

  02 May 2009; Joerg Bornkessel <hd_brummy@gentoo.org> files/xxv.utf8-v3,
  files/xxv.utf8-v4: