@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX xxv-1.0-logerror.patch 1477 RMD160 3795497ed97d16af9f7b10874619f567e723cc86 SHA1 712257f3d7a98da402f3c67bbd41b6bb132ff0a3 SHA256 ac8db7fb3d75be90dc33fdf427265dcd14355e572500140718fce2c731166822
 AUX xxv.utf8-v4 2402 RMD160 0383b510616c4606fc75ee614524ccd04bb5d724 SHA1 76054d84354fde02982c114d03cafd9838a9fd26 SHA256 e5d22a0640a84332f6c5fad74650174f56ffbc900a60d0be48165fe4164bec84
@@ -10,18 +10,17 @@ DIST xxv-1.4.tgz 915079 RMD160 af230b55e988139cc8144a6e9493a30f8277a1e6 SHA1 ff6
 DIST xxv-1.5.tgz 987576 RMD160 e45305f4981b90e6ff9dc42791fb8a91aaf4c510 SHA1 c0040a26dfe8fa7282d84322ff3d58b2f1f9cb8a SHA256 7d7bd518b96e9cc367cd6fc036e7131a4f1faa4cac4e19d6d40b87f3ef16f594
 DIST xxv-1.6.1.tgz 992065 RMD160 72da3a277aed8ca662faff881647b41264f2f833 SHA1 aaed0fb0158d67c56a0d2028877e3530f2a789b5 SHA256 14288f7fb4c16c536e0c861b4f213bc1a7bf19e036b6d37777989acaa9b82643
 DIST xxv-1.6.tgz 989847 RMD160 cdcc28836a8b1d216c99c3e44c032173d25c923d SHA1 64aff646e05c5abded0d7f0d1a07326cac887e40 SHA256 36a30939d605622276e025733a404f9674379d90f37229337bfa6dccaca12a60
-EBUILD xxv-1.4.ebuild 4464 RMD160 ab9064d777df59719ec409aa2baf6123db0ba8e7 SHA1 8983e195ab2ac8439ca4e7c6d6b0f4f8592fa45c SHA256 c2be4dfb6d8d1fab2a0f302cc9033b2478d73d11041d54c70c54f30895df09e7
-EBUILD xxv-1.5.ebuild 4483 RMD160 7f158ca5536198fb045751c6d5fac8638e591b1c SHA1 cc326a769dc0c5e5af5bb75be00b2d2a4d118ab7 SHA256 1799f4a9f12ef924c0387ed124244253f4bcde14558cc40870bca3990357c3a1
-EBUILD xxv-1.6.1.ebuild 4643 RMD160 256d94321254ac01e4b28bf6d8fa1e5d885b7b4b SHA1 8fb09bb3b18beb4af950df43f882136f5ff12e91 SHA256 b5c5d74a8d15f0c218ff79433b7ab0e34af38e0d775cf3197dfd271bc7e29fea
-EBUILD xxv-1.6.ebuild 4563 RMD160 894b5c7dc16794581f953447c0513ea9f77a24ce SHA1 fa9a09760248a893c13fafa8f8e752ede437244e SHA256 0f3401f5ef6a163d45aed7da2856133fdc276e732853ac283b3909d776a389d7
-MISC ChangeLog 5550 RMD160 54bca53e4e582cab753a09a15d0beb1b33275b5c SHA1 2555bd7c2e1bc8b4ec8c3d2520793bf7bba6f5e0 SHA256 a1bd6677665a6847b2f40f1b1d193feedfe54e2fee19632f02c30a4c2b15e922
+EBUILD xxv-1.4.ebuild 4417 RMD160 3cf8353ef6e603f86a84198d26338b678a4a14ad SHA1 50da62e8fefc106ec6e5e33e100e349f9a3983ae SHA256 ae082f3b3b6bbaf62ae1fd518d4baf3d07db19f692179f07aea10cdb047f77a1
+EBUILD xxv-1.5.ebuild 4436 RMD160 0741e0e4e36e5277bc9a47bd2873a336cdafe654 SHA1 9ce1453bc3039c4d7754c905df070961d37ed7fb SHA256 de5494c4c6ee0835e9eacccea696a34f2701d8630ae56fc0a17be84397470b14
+EBUILD xxv-1.6.1.ebuild 4619 RMD160 e4fb7bc8facd78b6c1c3e3a7d91472cc10c1fa02 SHA1 b0271dca933a291c93d0eb2585fd321920fa8f3c SHA256 0f0a10326af964392707e8fe318c0d2991d0f70e364d2381f33607049a305564
+EBUILD xxv-1.6.ebuild 4516 RMD160 0999d61178469e34569039d2424fe102a0c8117c SHA1 caa332114cb670673cfa683c46503f1a7a565b6f SHA256 a3bde6ad25f53ea915299a17cff281274776ea169e7baae97e35a3a341cd36dd
+MISC ChangeLog 5754 RMD160 b05288ebf5e6b3d4cea25738f4c35d30db0f69db SHA1 1a5558650315b0070dc055d2322480d7b493b858 SHA256 c482c865cb8493593e9b0dc9ae4ecfd58a14876a4bc79d58d76d71d7c2e35929
 MISC metadata.xml 585 RMD160 b0b357c93ae3621b4987dc08aa17035aba6db141 SHA1 a6980f5834e35f06e420b21ee475d5585b98a739 SHA256 e7d51f153d3ab51a13a168000d0cbf2253e9db4ab2580a98049079c8a45e3af1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
+Comment: added by hd_brummy@gentoo.org
 
-iJwEAQEIAAYFAk59tzgACgkQfXuS5UK5QB2MkQP/dCYxy/cJSBsyPl5TXDxqvFml
-mNIDUJ6YaqhUonBXFZnhtgYvTayx443/WDtG271NOmVfHMxSyO6xbnRy2Sj8FaWF
-1ACGEhMJY46Sxx5pMfMpbSAmiBlSItB5eJwN23syR4sZ7QIGwOYIt/QzFG+LgVH5
-MrbFb/47rcu+/c2nyBM=
-=+WtE
+iD8DBQFOraeOdn07HTTCgIoRAkeYAKCM1FBCpNSui2zavVElgm7DxXdBoACfRl/j
+JLdvjkzZKZuMCAAD2Esn6JA=
+=xMi+
 -----END PGP SIGNATURE-----
