@@ -1,6 +1,10 @@
 # ChangeLog for www-misc/xxv
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/xxv/ChangeLog,v 1.16 2011/01/13 17:57:12 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/xxv/ChangeLog,v 1.17 2011/10/30 19:36:55 hd_brummy Exp $
+
+  30 Oct 2011; Joerg Bornkessel <hd_brummy@gentoo.org> xxv-1.4.ebuild,
+  xxv-1.5.ebuild, xxv-1.6.ebuild, xxv-1.6.1.ebuild:
+  changed to gentoo mirror for dead berlios mirror; no new project page yet
 
   13 Jan 2011; Christian Ruppert <idl0r@gentoo.org> xxv-1.6.1.ebuild:
   Rephrase some sentences. HOMEPAGE fixed.
